# react-generator

./: CMakeLists.txt
include/: generate_component.h
src/: generate_component.cpp  main.cpp
templates/: component.css.template  component.js.template
